styles.css
* {
  margin: 0;
  padding: 0;
}

body {
  width: 100%;
  margin: 0 auto;
  background-color: #F2F1E8;
  position: relative;
}



/*******************************
  NAV BAR
*******************************/

nav {
  box-shadow: 0 3px 6px black;
  z-index: 1;
  position: fixed;
  top: 0;
  width: inherit;
  background-color: #fff;
}

.logo {
  height: 40px;
  position: absolute;
  left: 0;
  margin: 10px 15px;
}

ul {
  text-align: center;
  padding: 8px 0;
  text-transform: uppercase;
}

li {
  display: inline-block;
  padding: 10px 40px;
  font-family: 'Roboto', sans-serif;
  line-height: 1.5em;
}

li a {
  color: #2B2F26;
}

li a:hover {
  color: #CD5D67;
}

a.active {
  color: #968772;
}



/*******************************
  MAIN (INDEX)
*******************************/

main {
  width: 960px;
  margin: 0 auto;
/*  padding: 12px;*/
}

header {
  text-align: center;
  color: #131511;
  font-family: 'Merriweather', serif;
}

h1.top {
  font-size: 4em;
  margin-top: 100px;
  font-family: 'Merriweather', serif;
  text-align: center;
}

h2 {
  font-family: 'Merriweather', serif;
  font-size: 2em;
  font-weight: 200;
  line-height: 1.5em;
  margin-bottom: 50px;
}

.gallery {
  display: flex;
  flex-wrap: wrap;
}

.gallery > div {
  background-size: cover;
  margin: 1%;
}

.gallery p {
  color: #FFF;
  background-color: #2B2F26;
  line-height: 1.5em;
}

.endless-possibilities {
  background-image: url(optimized/product-1.jpg);
  height: 300px;
  flex-basis: 58%;
  position: relative;
}

.endless-possibilities p {
  display: inline-block;
  position: absolute;
  bottom: 20px;
  padding: 5px 10px;
}

.sets {
  background-image: url(optimized/product-2.jpg);
  height: 300px;
  flex-basis: 18%;
  position: relative;
}

.sets p {
  display: inline-block;
  position: absolute;
  bottom: 20px;
  padding: 5px 10px;
}

.textures {
  background-image: url(optimized/product-3.jpg);
  height: 300px;
  flex-basis: 18%;
  position: relative;
}

.textures p {
  display: inline-block;
  position: absolute;
  bottom: 20px;
  padding: 5px 10px;
}

.tea-time {
  background-image: url(optimized/product-4.jpg);
  height: 150px;
  flex-basis: 18%;
  position: relative;
}

.tea-time p {
  display: inline-block;
  position: absolute;
  bottom: 20px;
  padding: 5px 10px;
}

.jars-and-containers {
  background-image: url(optimized/product-5.jpg);
  height: 150px;
  flex-basis: 18%;
  position: relative;
}

.jars-and-containers p {
  display: inline-block;
  position: absolute;
  bottom: 20px;
  padding: 5px 10px;
}

.wasabi-and-saki {
  background-image: url(optimized/product-6.jpg);
  height: 150px;
  flex-basis: 38%;
  position: relative;
}

.wasabi-and-saki p {
  display: inline-block;
  position: absolute;
  bottom: 20px;
  padding: 5px 10px;
}

.sippin-on-sunshine {
  background-image: url(optimized/product-7.jpg);
  height: 150px;
  flex-basis: 18%;
  position: relative;
}

.sippin-on-sunshine p {
  display: inline-block;
  position: absolute;
  bottom: 20px;
  padding: 5px 10px;
}



/*******************************
  ABOUT
*******************************/

.about {
/*  line-height: 1.5em;*/
  display: flex;
  flex-wrap: wrap;
}

.about h1 {
  margin-bottom: 50px;
  flex-basis: 100%;
}

h3 {
  color: #2B2F26;
  font-family: 'Merriweather', serif;
}

p > a {
  color: #968772;
}

article {
  margin-bottom: 50px;
  line-height: 1.5em;
}

article img {
  height: 80px;
  padding-right: 10px;
  float: left;
}

article h3 {
  margin-top: 20px;
  margin-bottom: 10px;
}

blockquote {
  font-style: italic;
  border-left: 2px solid #968772;
  padding-left: 40px;
  margin: 20px 0;
  flex-basis: 100%;
}

h1.grow {
  line-height: 250px;
  text-align: center;
  font-family: 'Merriweather', serif;
  font-size: 3.5em;
  margin-bottom: 50px;
}

.grow {
  color: #fff;
  background-image: url(optimized/background-3.jpg);
  background-size: cover;
/*  padding: 50px 0;*/
  flex-basis: 100%;
}

.monthly-plans {
  flex-basis: 75%;
  line-height: 1.5em;
}

.monthly-plans h3 {
  margin-bottom: 20px;
}

.monthly-plans p {
  margin-bottom: 50px;
  padding-right: 20px;
}

aside {
  flex-basis: 25%;
  line-height: 1.5em;
}

aside img {
 width: 240px; 
}

aside p {
  font-size: .75em;
  font-style: italic;
  padding-left: 10px;
}

table {
  border-collapse: collapse;
  margin-bottom: 25px;
  width: 100%;
}

thead {
  text-align: center;
}

td {
  border: 1px solid #131511;
  padding: 10px;
}

.orange {
  background-color: #ffF1E8;
}




/*******************************
  FOOTER
*******************************/

footer {
  background-color: #2B2F26;
  color: #FFF;
}

footer p {
  margin: 0;
  padding: 20px;
}

